// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Matches the 'disabled' snapshot 1`] = `
<button
  className="bcgov-button normal-blue btn"
  data-test-id=""
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  Button label
</button>
`;

exports[`Button Component Matches the 'hasLoader' snapshot 1`] = `
<button
  className="bcgov-button normal-blue btn"
  data-test-id=""
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Button label
  <div
    className="bcgov-loader-show"
  >
    <div
      className="loader-align"
    >
      <div
        className="btn-loader"
      />
    </div>
  </div>
</button>
`;

exports[`Button Component Matches the 'primary' snapshot 1`] = `
<button
  className="bcgov-button normal-blue btn"
  data-test-id=""
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Button label
</button>
`;

exports[`Button Component Matches the 'secondary' snapshot 1`] = `
<button
  className="bcgov-button normal-white btn"
  data-test-id=""
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Button label
</button>
`;
